--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <br><br>
                             <b>"Happy Anniversary"</b> to both of you!
                         </p>
-                        <p class="m2">-ইতি আপনাদের ছানা &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                        <p class="m2">-ইতি আপনাদের ছানা &nbsp;&nbsp;&nbsp;&nbsp;</p>
                     </div>
                 </div>
             </div>
